[bumpversion]
commit = True
current_version = 6.2.2
files = mixer/__init__.py
tag = True
tag_name = {new_version}

[metadata]
name = mixer
version = attr: mixer.__version__
url = https://github.com/klen/mixer
description = file: DESCRIPTION
long_description = file: README.rst
description_file = README.rst
license = BSD
license_files = LICENSE
keywords = django, flask, sqlalchemy, testing, mock, stub, mongoengine, data
project_urls = 
	Documentation = https://mixer.readthedocs.org
	Source code = https://github.com/klen/mixer
	Issue tracker = https://github.com/klen/mixer
author = Kirill Klenov
author_email = horneds@gmail.com
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License,
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Software Development :: Testing
	Topic :: Utilities

[options]
python_requires = >= 3.7
zip_safe = False

[wheel]
python-tag = py37

[tool:pytest]
addopts = -xsv

[pylama:tests/*]
ignore = D
